crates/mdroots-syntax/tests/snapshots/zk-min__README.md.snap
---
source: crates/mdroots-syntax/tests/corpus.rs
description: ""
expression: value
---
Summary {
    lossy: false,
    frontmatter: None,
    headings: [
        HeadingSummary {
            level: 1,
            text: "zk-min: a minimal zk notebook fixture",
            slug: "zk-min-a-minimal-zk-notebook-fixture",
            id: None,
            custom_id: None,
        },
    ],
    links: [
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "tests/fixtures/zk/",
            path: "tests/fixtures/zk/",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "tests/fixtures/zk/",
            text_range: "tests/fixtures/zk/",
            src_line: 3,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "a.md",
            path: "a.md",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "a.md",
            text_range: "a.md",
            src_line: 9,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "b.md",
            path: "b.md",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "b.md",
            text_range: "b.md",
            src_line: 9,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "a.md",
            path: "a.md",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "a.md",
            text_range: "a.md",
            src_line: 9,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "broken.md",
            path: "broken.md",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "broken.md",
            text_range: "broken.md",
            src_line: 10,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "emoji.md",
            path: "emoji.md",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "emoji.md",
            text_range: "emoji.md",
            src_line: 11,
        },
        LinkSummary {
            kind: BarePath,
            context: Prose,
            confidence: Implicit,
            raw: "UTF-8/16/32",
            path: "UTF-8/16/32",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "UTF-8/16/32",
            text_range: "UTF-8/16/32",
            src_line: 11,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: "tagged.md",
            path: "tagged.md",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "tagged.md",
            text_range: "tagged.md",
            src_line: 12,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: ".zk/config.toml",
            path: ".zk/config.toml",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: ".zk/config.toml",
            text_range: ".zk/config.toml",
            src_line: 13,
        },
        LinkSummary {
            kind: CodeMention,
            context: InlineCode,
            confidence: Implicit,
            raw: ".marksman.toml",
            path: ".marksman.toml",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: ".marksman.toml",
            text_range: ".marksman.toml",
            src_line: 14,
        },
    ],
    tags: [],
    link_defs: [],
}
