crates/mdroots-syntax/tests/snapshots/zk-min__b.md.snap
---
source: crates/mdroots-syntax/tests/corpus.rs
description: ""
expression: value
---
Summary {
    lossy: false,
    frontmatter: None,
    headings: [
        HeadingSummary {
            level: 1,
            text: "Note B",
            slug: "note-b",
            id: None,
            custom_id: None,
        },
    ],
    links: [
        LinkSummary {
            kind: Markdown,
            context: Prose,
            confidence: Explicit,
            raw: "a",
            path: "a",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[Note A](a)",
            text_range: "Note A",
            src_line: 3,
        },
    ],
    tags: [],
    link_defs: [],
}
