crates/mdroots-syntax/tests/snapshots/zk-min__broken.md.snap
---
source: crates/mdroots-syntax/tests/corpus.rs
description: ""
expression: value
---
Summary {
    lossy: false,
    frontmatter: None,
    headings: [
        HeadingSummary {
            level: 1,
            text: "Broken",
            slug: "broken",
            id: None,
            custom_id: None,
        },
    ],
    links: [
        LinkSummary {
            kind: Markdown,
            context: Prose,
            confidence: Explicit,
            raw: "missing-note",
            path: "missing-note",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[nowhere](missing-note)",
            text_range: "nowhere",
            src_line: 3,
        },
    ],
    tags: [],
    link_defs: [],
}
