crates/mdroots-syntax/tests/snapshots/zk-min__emoji.md.snap
---
source: crates/mdroots-syntax/tests/corpus.rs
description: ""
expression: value
---
Summary {
    lossy: false,
    frontmatter: None,
    headings: [
        HeadingSummary {
            level: 1,
            text: "Emoji",
            slug: "emoji",
            id: None,
            custom_id: None,
        },
    ],
    links: [
        LinkSummary {
            kind: Markdown,
            context: Prose,
            confidence: Explicit,
            raw: "b",
            path: "b",
            anchor: None,
            label: None,
            line: None,
            group: None,
            range: "[Note B](b)",
            text_range: "Note B",
            src_line: 3,
        },
    ],
    tags: [],
    link_defs: [],
}
